--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,5 +1,5 @@
-# Required Python packages for Wan 2.2 TI2V-5B Video Generation
-# Based on official Wan 2.2 requirements: torch >= 2.4.0
+# Lightweight requirements for Wan 2.2 TI2V-5B Video Generation
+# Using PyTorch 2.1.2+cu121 (installed in Dockerfile)
 
 runpod==1.4.2
 
@@ -7,37 +7,34 @@ runpod==1.4.2
 huggingface_hub
 modelscope
 
-# Video generation and diffusion models
-diffusers==0.31.0
-transformers==4.46.2
-accelerate==0.34.2
-safetensors==0.4.5
+# Video generation and diffusion models (lightweight versions)
+diffusers==0.25.1
+transformers==4.36.2
+accelerate==0.25.0
+safetensors==0.4.1
 
 # Video processing and encoding
-opencv-python==4.10.0.84
-imageio==2.36.0
-imageio-ffmpeg==0.5.1
-pillow==10.4.0
+opencv-python-headless==4.8.1.78
+imageio==2.33.1
+imageio-ffmpeg==0.4.9
+pillow==10.1.0
 
-# Numerical computing
-numpy==1.26.4
-scipy==1.14.1
+# Numerical computing (compatible versions)
+numpy==1.24.4
+scipy==1.11.4
 
 # Model utilities and tokenization
-tokenizers==0.20.3
-sentencepiece==0.2.0
+tokenizers==0.15.0
+sentencepiece==0.1.99
 
-# Flash attention for memory efficiency (use pre-compiled wheel if available)
-# flash-attn==2.6.3  # Commented out to reduce build time - will install via pip if needed at runtime
-
-# Memory management and optimization
-xformers==0.0.29
+# Memory management (lighter version)
+xformers==0.0.23
 
 # S3/R2 upload support
 boto3>=1.26.0
 botocore>=1.29.0
 
 # Additional utilities
-regex==2024.9.11
-requests==2.32.3
-tqdm==4.66.5 
+regex==2023.12.25
+requests==2.31.0
+tqdm==4.66.1 
