--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,51 +1,14 @@
-# Official Wan 2.2 TI2V-5B requirements
-# Based on https://huggingface.co/Wan-AI/Wan2.2-TI2V-5B
-# Requires: torch >= 2.4.0 (installed in Dockerfile as 2.4.1+cu118)
-runpod==1.4.2
-
-# Wan 2.2 official dependencies
-huggingface_hub>=0.24.0
-modelscope>=1.9.0
-
-# Video generation and diffusion models (PyTorch 2.4.1 compatible)
-diffusers>=0.30.0
+# Simplified requirements for Diffusers approach
+torch>=2.4.0
+diffusers>=0.31.0
 transformers>=4.44.0
 accelerate>=0.33.0
 safetensors>=0.4.4
+Pillow>=10.4.0
+numpy>=1.26.0
+runpod>=1.4.2
 
-# Video processing and encoding
-opencv-python-headless>=4.10.0.84
+# Video processing essentials
 imageio>=2.35.0
 imageio-ffmpeg>=0.5.1
-pillow>=10.4.0
-
-# Numerical computing (PyTorch 2.4.1 compatible)
-numpy>=1.26.0
-scipy>=1.14.0
-
-# Model utilities and tokenization
-tokenizers>=0.19.0
-sentencepiece>=0.2.0
-
-# Memory management and optimization
-xformers>=0.0.27
-
-# S3/R2 upload support
-boto3>=1.26.0
-botocore>=1.29.0
-
-# Additional utilities
-regex==2023.12.25
-requests==2.31.0
-tqdm==4.66.1
-
-# MISSING CRITICAL DEPENDENCIES - ADD THESE:
-easydict>=1.9
-einops>=0.7.0
-decord>=0.6.0
-av>=10.0.0
-timm>=0.9.0
-ftfy>=6.1.0
-
-# Optional but recommended for Wan 2.2
-packaging>=21.0
+opencv-python-headless>=4.10.0
