--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,6 +1,6 @@
 # Simplified requirements for Diffusers approach
 torch>=2.4.0
-diffusers>=0.32.0
+diffusers>=0.34.0
 transformers>=4.44.0
 accelerate>=0.33.0
 safetensors>=0.4.4
@@ -12,3 +12,6 @@ runpod>=1.4.2
 imageio>=2.35.0
 imageio-ffmpeg>=0.5.1
 opencv-python-headless>=4.10.0
+
+# Text processing for WanPipeline
+ftfy>=6.1.1
