--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,5 +1,6 @@
 # --- Core ML Stack (Version-Pinned for Stability) ---
 torch==2.4.1
+torchvision==0.19.1
 diffusers==0.34.0
 transformers==4.44.0
 accelerate==0.33.0
