--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -12,7 +12,9 @@ omegaconf
 # --- Serverless Application Dependencies ---
 runpod>=1.4.2
 boto3
+botocore
 loguru
+huggingface_hub
 
 # --- Image/Video Processing Essentials ---
 Pillow>=10.4.0
@@ -21,5 +23,5 @@ imageio>=2.35.0
 imageio-ffmpeg>=0.5.1
 opencv-python-headless>=4.10.0
 
-# --- Text Processing for WanPipeline ---
+# --- Text Processing for CogVideoX ---
 ftfy
