--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -5,7 +5,7 @@ diffusers==0.34.0
 transformers==4.44.0
 accelerate==0.33.0
 safetensors>=0.4.4
-xformers==0.0.28
+xformers==0.0.27.post2
 einops==0.8.0
 omegaconf
 
