--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,7 +1,5 @@
 # Core dependencies for Wan2.2 model
-torch==2.5.1
-torchvision==0.20.1
-torchaudio==2.5.1
+# PyTorch packages are installed separately in Dockerfile
 diffusers>=0.30.0
 transformers>=4.44.0
 accelerate>=0.33.0
