--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -24,5 +24,5 @@ scipy>=1.11.0
 requests>=2.31.0
 psutil>=5.9.0
 
-# Optional optimizations
-xformers>=0.0.22; platform_machine == "x86_64" 
+# Note: xformers removed due to PyTorch version conflicts
+# It can be installed separately if needed with specific CUDA compatibility 
